[package]
name = "iroh-gossip-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
ciborium = "0.2.2"
dashmap = "6.1.0"
futures = "0.3"
iroh = { version = "0.35.0", features = ["discovery-local-network"] }
iroh-gossip = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "address_book_demo"
path = "examples/address_book_demo.rs"
